@@ -1,5 +1,5 @@
-/*
- * $Id: ChangeLog,v 1.907 2003/04/03 04:15:10 ronpinkas Exp $
+/*                                
+ * $Id: ChangeLog,v 1.908 2003/04/03 17:49:18 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-04-01 20:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * utils/hbmake/hbmutils.prg
+    *minor fix misc.lib ->libmisc.lib
+  * source/rtl/Makefile
+    + Added used_mt to DIRS macro
+  + source/rtl/uses_mt/Makefile
+    + Makefile to build rpcmt library
 
 2003-04-03 09:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbpp.h
